--- a/package.json
+++ b/package.json
@@ -2,14 +2,19 @@
   "name": "service-booking",
   "version": "0.1.0",
   "private": true,
+  "prisma": {
+    "schema": "./prisma"
+  },
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prisma": "dotenv -e .env.local prisma --"
   },
   "dependencies": {
     "@next/env": "^15.4.4",
+    "@prisma/client": "^6.12.0",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-navigation-menu": "^1.2.13",
     "@radix-ui/react-slot": "^1.2.3",
@@ -17,6 +22,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dotenv-cli": "^9.0.0",
     "lucide-react": "^0.525.0",
     "next": "15.4.4",
     "react": "19.1.0",
@@ -33,6 +39,8 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.4",
+    "prisma": "^6.12.0",
+    "supabase": "^2.31.8",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.6",
     "typescript": "^5"
