--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "prisma": "dotenv -e .env.local prisma --"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^4.8.0",
     "@next/env": "^15.4.4",
-    "@prisma/client": "^6.12.0",
+    "@prisma/client": "^6.13.0",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-navigation-menu": "^1.2.13",
     "@radix-ui/react-slot": "^1.2.3",
@@ -26,7 +27,6 @@
     "dotenv-cli": "^9.0.0",
     "lucide-react": "^0.525.0",
     "next": "15.4.4",
-    "next-auth": "^4.24.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1",
@@ -41,8 +41,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.4",
-    "prisma": "^6.12.0",
-    "supabase": "^2.31.8",
+    "prisma": "^6.13.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.6",
     "typescript": "^5"
