--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@next/env": "^15.4.4",
     "@prisma/client": "^6.13.0",
     "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-navigation-menu": "^1.2.13",
     "@radix-ui/react-slot": "^1.2.3",
     "@stripe/stripe-js": "^7.8.0",
